test/errors/test_empty2.todo
OK - 2026-03-28 - */ Done task.